# CartesIO_OpenSoT_Tutorial

./: README.md
src/markers/: CMakeLists.txt  package.xml
src/markers/src/: basic_shapes.cpp  simple_marker.cpp
src/test/: CMakeLists.txt  package.xml
src/test/src/: OpenSoT.cpp  cartesio_solver.cpp  cartesio_solver_marker.cpp  test1.cpp  walking_solver.cpp  walking_solver2.cpp
